cmake_minimum_required(VERSION 2.8)
set(CMAKE_CUDA_COMPILER /usr/local/cuda/bin/nvcc)
project(cudahandbook)
add_definitions(-std=c++11)
add_subdirectory(concurrency)
add_subdirectory(corr)
#add_subdirectory(driverAPI)
#add_subdirectory(histogram)
add_subdirectory(memory)
add_subdirectory(microbench)
#add_subdirectory(nbody)
add_subdirectory(reduction)
#add_subdirectory(scan)
add_subdirectory(SMs)
add_subdirectory(streaming)
add_subdirectory(texturing)
