find_package(CUDA REQUIRED)
include_directories(${CUDA_INCLUDE_DIRS})
include_directories(${CMAKE_SOURCE_DIR}/chLib)


file(GLOB SRC_LIST *.cu)
list(REMOVE_ITEM SRC_LIST "${CMAKE_SOURCE_DIR}/texturing/surf2Dmemset.cu") 
list(REMOVE_ITEM SRC_LIST "${CMAKE_SOURCE_DIR}/texturing/surf2Dmemset_shmoo.cu") 
list(REMOVE_ITEM SRC_LIST "${CMAKE_SOURCE_DIR}/texturing/tex1d_9bit.cu") 
list(REMOVE_ITEM SRC_LIST "${CMAKE_SOURCE_DIR}/texturing/tex1d_addressing.cu") 
list(REMOVE_ITEM SRC_LIST "${CMAKE_SOURCE_DIR}/texturing/tex2d_shmoo.cu") 
list(REMOVE_ITEM SRC_LIST "${CMAKE_SOURCE_DIR}/texturing/tex2d_opengl.cu") 

FOREACH(FILE_PATH ${SRC_LIST})
    MESSAGE(${FILE_PATH})
    STRING(REGEX REPLACE ".+/(.+)\\..*" "\\1" FILE_NAME ${FILE_PATH})
    MESSAGE(${FILE_NAME})
    cuda_add_executable(${FILE_NAME} ${FILE_PATH})
    target_link_libraries(${FILE_NAME} ${CUDA_LIBRARIES})
ENDFOREACH(FILE_PATH)